--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,4 +27,20 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
     - run: npm run build
-    - run: npm test
+    
+  web-deploy:
+    name: 🎉 Deploy
+    runs-on: windows-latest
+    steps:
+    - name: 🚚 Get latest code
+      uses: actions/checkout@v2.3.2
+
+    - name: 📂 Sync files
+      uses: SamKirkland/FTP-Deploy-Action@4.0.0
+      with:
+        server: ftp.devoperadoracocay.com
+        username: jimmi@devoperadoracocay.com	
+        password: Job3811!
+        protocol: ftp
+        port: 21 # todo replace with your web hosts ftps port
+        server-dir: public_html/www/
