--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -44,4 +44,4 @@ jobs:
         protocol: ftp
         port: 21 # todo replace with your web hosts ftps port
         server-dir: public_html/www/
-        local-dir: ./dist/*
+        local-dir: dist/*
