--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,4 +30,5 @@ jobs:
         FTP_USERNAME: jimmi@devoperadoracocay.com
         FTP_PASSWORD: Job3811!
         LOCAL_DIR: build
+        server-dir: public_html/www/
         ARGS: --delete
