--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Build Project
       run: |
         npm install
-        npm run build --if-present
+        npm run build 
         
     - name: List output files
       run: ls
