--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,5 +30,5 @@ jobs:
         FTP_USERNAME: jimmi@devoperadoracocay.com
         FTP_PASSWORD: Job3811!
         LOCAL_DIR: dist/deployment-angular/
-        ARGS: --delete
+        dangerous-clean-slate: true,
         server-dir: public_html/
