--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,4 +28,4 @@ jobs:
         FTP_PASSWORD: Job3811!
         LOCAL_DIR: dist/deployment-angular/
         dangerous-clean-slate: true,
-        SERVER-DIR: operadoracocay.com/
+        SERVER-DIR: ./operadoracocay.com/
