--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "APP_VERSION=$npm_package_version react-scripts build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
